--- a/3_Evolution-Multiple-Stressors_SM.Rmd
+++ b/3_Evolution-Multiple-Stressors_SM.Rmd
@@ -60,9 +60,7 @@ j.red <- rgb(245/255, 159/255, 148/255)
 j.blue <- rgb(195/255, 214/255, 245/255)
 j.red_alpha <- rgb(245/255, 159/255, 148/255, alpha = 0.65)
 j.blue_alpha <- rgb(195/255, 214/255, 245/255, alpha = 0.65)
-
 ```
-
 
 - **Make logical subsets**
 
@@ -86,7 +84,7 @@ Control_in_NaTemp <- subset(rot_pop, treat_num == "6")
 Control_in_CuTemp <- subset(rot_pop, treat_num == "7")
 Control_in_All <- subset(rot_pop, treat_num == "8")
 
-#### For Pareto Front ####
+#### For Performance Space Plots ####
 NaCu_in_Na <- subset(rot_pop, treat_num == "34")
 NaCu_in_Cu <- subset(rot_pop, treat_num == "35")
 NaCu_in_Temp <- subset(rot_pop, treat_num == "36")
@@ -99,9 +97,6 @@ CuTemp_in_Temp <- subset(rot_pop, treat_num == "52")
 All_in_Na <- subset(rot_pop, treat_num == "58")
 All_in_Cu <- subset(rot_pop, treat_num == "59")
 All_in_Temp <- subset(rot_pop, treat_num == "60")
-Na_in_Control <- subset(rot_pop, treat_num == "9")
-Cu_in_Control <- subset(rot_pop, treat_num == "17")
-Temp_in_Control <- subset(rot_pop, treat_num == "25")
 Na_in_Cu <- subset(rot_pop, treat_num == "11")
 Cu_in_Na <- subset(rot_pop, treat_num == "18")
 Na_in_Temp <- subset(rot_pop, treat_num == "12")
@@ -110,17 +105,21 @@ Cu_in_Temp <- subset(rot_pop, treat_num == "20")
 Temp_in_Cu <- subset(rot_pop, treat_num == "27")
 
 #### For Removal of Stressors #####
+Na_in_Control <- subset(rot_pop, treat_num == "9")
+Cu_in_Control <- subset(rot_pop, treat_num == "17")
+Temp_in_Control <- subset(rot_pop, treat_num == "25")
 NaCu_in_Control <- subset(rot_pop, treat_num == "33")
 NaTemp_in_Control <- subset(rot_pop, treat_num == "41")
 CuTemp_in_Control <- subset(rot_pop, treat_num == "49")
 All_in_Control <- subset(rot_pop, treat_num == "57")
-
+All_in_NaCu <- subset(rot_pop, treat_num == "61")
+All_in_NaTemp <- subset(rot_pop, treat_num == "62")
+All_in_CuTemp <- subset(rot_pop, treat_num == "63")
 ```
 
 - **Calculate required summary statistics**
 
 ```{r, echo=TRUE}
-
 ## Some functions to speed things up ##
 
 std.error <- function(x){ 
@@ -203,11 +202,9 @@ list[mgrowth_Control_in_All, segrowth_Control_in_All, rawD_all_on_c,
   statistics(Control_in_All$mean_growth, Control_in_Control$mean_growth)
 ```
 
-
 - **Calculate distances and coordinates** 
 
 ```{r, echo=TRUE}
-
 coord <- function(x){
   return(x/2)
 }
@@ -265,14 +262,11 @@ coord_all_evo_pop <- coord(mgrowth_Control_in_Control-
 #### additive expectation for 3D video #####
 coord_all_con_add <- coord(rawD_na_on_c+rawD_cu_on_c+rawD_temp_on_c)
 coord_all_evo_add <- coord(rawD_na_on_e+rawD_cu_on_e+rawD_temp_on_e)
-
 ```
 
+- **means of populations**
 
-- **means of populations and cost of removing stressors**
-
-```{r, echo=FALSE}
-
+```{r, echo=TRUE}
 ### gathering mean data points 
 mgrowth_NaCu_in_Na <- mean(NaCu_in_Na$mean_growth)
 mgrowth_NaCu_in_Cu <- mean(NaCu_in_Cu$mean_growth)
@@ -286,13 +280,105 @@ mgrowth_All_in_Temp <- mean(All_in_Temp$mean_growth)
 mgrowth_Na_in_Control <- mean(Na_in_Control$mean_growth)
 mgrowth_Cu_in_Control <- mean(Cu_in_Control$mean_growth)
 mgrowth_Temp_in_Control <- mean(Temp_in_Control$mean_growth)
-
-### So that removing a stressor can be accounted for ### 
-Na_removed <- mgrowth_Na_in_Na-mgrowth_Na_in_Control 
-Cu_removed <- mgrowth_Cu_in_Cu-mgrowth_Cu_in_Control
-Temp_removed <- mgrowth_Temp_in_Temp-mgrowth_Temp_in_Control
+mgrowth_All_in_NaCu <- mean(All_in_NaCu$mean_growth)
+mgrowth_All_in_NaTemp <- mean(All_in_NaTemp$mean_growth)
+mgrowth_All_in_CuTemp <- mean(All_in_CuTemp$mean_growth)
+mgrowth_NaCu_in_Control <- mean(NaCu_in_Control$mean_growth)
+mgrowth_NaTemp_in_Control <- mean(NaTemp_in_Control$mean_growth)
+mgrowth_CuTemp_in_Control <- mean(CuTemp_in_Control$mean_growth)
 ```
 
+
+- **Calculate adaptations** 
+
+```{r, echo=TRUE}
+#### NA ####
+ad_na_to_na <- Na_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_na_to_cu <- Na_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_na_to_temp <- Na_in_Temp$mean_growth - mgrowth_Control_in_Temp
+
+#### CU ####
+ad_cu_to_na <- Cu_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_cu_to_cu <- Cu_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_cu_to_temp <- Cu_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### TEMP ####
+ad_temp_to_na <- Temp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_temp_to_cu <- Temp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_temp_to_temp <- Temp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### NACU ####
+ad_nacu_to_na <- NaCu_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_nacu_to_cu <- NaCu_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_nacu_to_temp <- NaCu_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### NATEMP ####
+ad_natemp_to_na <- NaTemp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_natemp_to_cu <- NaTemp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_natemp_to_temp <- NaTemp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### CUTEMP ####
+ad_cutemp_to_na <- CuTemp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_cutemp_to_cu <- CuTemp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_cutemp_to_temp <- CuTemp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### ALL ####
+ad_all_to_na <- All_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_all_to_cu <- All_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_all_to_temp <- All_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+```
+
+- **Calculate removal effect** 
+
+```{r, echo=TRUE}
+# See supplementary note for an explanation of why this step is required 
+# The growth rate of NaCu in Cu contains the ad_nacu_to_cu 
+# But it also contains the removal effect (i.e. maladaptation) of removing na 
+# We don't have access to this information directly 
+# So we make approximations based on the information we do have 
+
+### Effect of removing a stressor
+Na_removed <- mgrowth_Na_in_Control-mgrowth_Control_in_Control
+Cu_removed <- mgrowth_Cu_in_Control-mgrowth_Control_in_Control
+Temp_removed <- mgrowth_Temp_in_Control-mgrowth_Control_in_Control
+
+### For the different evolved lines  
+NaCu_Na_removed <- Na_removed
+NaCu_Cu_removed <- Cu_removed
+NaTemp_Na_removed <- Na_removed
+NaTemp_Temp_removed <- Temp_removed
+CuTemp_Cu_removed <- Cu_removed
+CuTemp_Temp_removed <- Temp_removed
+
+######### Special case of three stressors ###########
+# Using information about double evolved lines in their own environment
+# Explanation in supplementary note:  all_performance = 0.5*Adj*colvec
+# all_performance is what we want (performance space coordinates)
+# col_vec is what we know (adaptation of abc to ab/ac/bc) and removal of a/b/c
+# Adj = adjoint matrix, details in supplementary note 
+
+# Defining colvec
+colvec_1 <- (mgrowth_All_in_NaCu-mgrowth_Control_in_NaCu)-Temp_removed
+colvec_2 <- (mgrowth_All_in_NaTemp-mgrowth_Control_in_NaTemp)-Cu_removed
+colvec_3 <- (mgrowth_All_in_CuTemp-mgrowth_Control_in_CuTemp)-Na_removed
+colvec <- c(colvec_1, colvec_2, colvec_3)
+
+# Definig Adj
+Adj <- matrix(c(1, 1, -1, 1, -1, 1, -1, 1, 1), nrow=3)
+
+# Calculating perfomrnace space coordinates
+all_performance <- 0.5*Adj%*%colvec      #   %*% is matrix multiplication
+
+# Calculate the removal effect (to be consistent with older code)
+All_CuTemp_removed <- mean(ad_all_to_na)- all_performance[1]
+All_NaTemp_removed <- mean(ad_all_to_cu) - all_performance[2]
+All_NaCu_removed <- mean(ad_all_to_temp) - all_performance[3]
+
+# Extra information required for 3d plots
+NaCu_NaCu_removed <- Na_removed + Cu_removed
+NaTemp_NaTemp_removed <- Na_removed + Temp_removed
+CuTemp_CuTemp_removed <- Cu_removed + Temp_removed
+```
 
 <br>
 <br>
@@ -734,97 +820,12 @@ text(growth_trend_data$effect2 ~ growth_trend_data$treatment_J,
 ```
 
 <br>
-<br>
 
-
-### Suplementary Fig 2: Delta AB vs Delta AB*
-
-Comparing evolution to multiple stressors with change in state space
-
-Seeing if the multiple stressor environment is easily decomposed into the sum of its parts. Is adaptation to C and to T the same as adaptation to CT? 
-
-In other words, is the difference between CT and CT' the same as the difference between CT and CT' in 2D performance space defined by fitness in C and fitness in T.
-
-
-```{r, echo=FALSE}
-
-####### delta AB ########
-delta_NC = mgrowth_NaCu_in_NaCu - mgrowth_Control_in_NaCu
-delta_NT = mgrowth_NaTemp_in_NaTemp - mgrowth_Control_in_NaTemp
-delta_CT = mgrowth_CuTemp_in_CuTemp - mgrowth_Control_in_CuTemp
-delta_NCT = mgrowth_All_in_All - mgrowth_Control_in_All 
-
-######### delta AB* #########
-## L1 (manhattan) distance between two points (control and evolved) with dist()
-
-nacu_con <- c(mgrowth_Control_in_Na, mgrowth_Control_in_Cu)
-nacu_evo <- c(mgrowth_NaCu_in_Na+Cu_removed, 
-              mgrowth_NaCu_in_Cu+Na_removed)
-
-natemp_con <- c(mgrowth_Control_in_Na, mgrowth_Control_in_Temp)
-natemp_evo <- c(mgrowth_NaTemp_in_Na+Temp_removed, 
-                mgrowth_NaTemp_in_Temp+Na_removed)
-
-cutemp_con <- c(mgrowth_Control_in_Cu, mgrowth_Control_in_Temp)
-cutemp_evo <- c(mgrowth_CuTemp_in_Cu+Temp_removed, 
-                mgrowth_CuTemp_in_Temp+Cu_removed)
-
-all_con <- c(mgrowth_Control_in_Na, mgrowth_Control_in_Cu, 
-             mgrowth_Control_in_Temp)
-all_evo <- c(mgrowth_All_in_Na+Cu_removed+Temp_removed, 
-             mgrowth_All_in_Cu+Na_removed+Temp_removed,
-             mgrowth_All_in_Temp+Na_removed+Cu_removed)
-
-delta_NC_star <- stats::dist(rbind(nacu_con, nacu_evo), 
-                             method = "manhattan")[1]
-delta_NT_star <- stats::dist(rbind(natemp_con, natemp_evo), 
-                             method = "manhattan")[1]
-delta_CT_star <- stats::dist(rbind(cutemp_con, cutemp_evo), 
-                             method = "manhattan")[1]
-delta_NCT_star <- stats::dist(rbind(all_con, all_evo), 
-                              method = "manhattan")[1]
-
-```
-
-
-
-```{r, echo=FALSE, fig.width=4, fig.height=4, include=TRUE}
-
-plot(1, type="n", bty = "n", yaxt = 'n', xaxt = 'n',
-     cex.main = 2.5,
-     xlim=c(0.0, 0.15), ylim=c(0.0, 0.15), 
-     xlab = "", #TeX('$\\Delta A B$'),
-     ylab= "") #TeX('$\\Delta A B^{*}$'))
-
-axis(side = 1, pos = 0.0,
-     at = c(0, 0.05, 0.1, 0.15), 
-     labels = c("0", "5", "10", "15"),
-     cex.axis=1, las=1, lwd=1, lwd.ticks = 1)
-
-axis(side = 2, pos = 0.0,
-     at = c(0, 0.05, 0.1, 0.15), 
-     labels = c("0", "5", "10", "15"),
-     cex.axis=1, las=1, lwd=1, lwd.ticks = 1)
-
-points(x = c(delta_NC, delta_CT, delta_NT, delta_NCT),
-       y = c(delta_NC_star, delta_CT_star, delta_NT_star, delta_NCT_star),
-       col = j.red, pch = 19, cex = 5)
-
-text(x = c(delta_NC, delta_CT, delta_NT, delta_NCT),
-       y = c(delta_NC_star, delta_CT_star, delta_NT_star, delta_NCT_star),
-     labels = c("SC", "CT", "ST", "SCT"), family = "Times", 
-     col = rgb(0.4, 0.4, 0.4), cex = 1)
-
-segments(0, 0, 15, 15)
-
-```
-
-
+### Suplementary Fig 2 - No Data
 
 <br>
-<br>
 
-### Suplementary Video 1: All Three Stressors
+### Suplementary Video 1 - All Stressors (4 axes)
 
 Resources: 
 
@@ -833,7 +834,6 @@ Resources:
 
 
 ```{r, echo=FALSE}
-
 x.coords = c(rawD_na_on_c, 0, 0, rawD_na_on_e, 0, 0)
 y.coords = c(0, rawD_cu_on_c, 0, 0, rawD_cu_on_e, 0)
 z.coords = c(0, 0, rawD_temp_on_c, 0, 0, rawD_temp_on_e)
@@ -1003,60 +1003,131 @@ title3d(xlab = "Effect of Salt",
 
 
 
-### Suplementary Video 2: All Three Stressors - Pareto Front
+### Suplementary Video 2 - 3D perforamnce space
+
+#### Part a
+
 
 ```{r, echo=FALSE}
 
-x.coords = c(mgrowth_Control_in_Na, 0, 0, mgrowth_Na_in_Na, 0, 0)
-y.coords = c(0, mgrowth_Control_in_Cu, 0, 0, mgrowth_Cu_in_Cu, 0)
-z.coords = c(0, 0, mgrowth_Control_in_Temp, 0, 0, mgrowth_Temp_in_Temp)
-
-x.coords_2 = x.coords+0.0055
-y.coords_2 = y.coords+0.0055
-z.coords_2 = z.coords+0.0055
-
 ########### Points ###########
 
-scatter3D(x = x.coords, y = y.coords, z = z.coords,
+## ALl ##
+scatter3D(x = ad_all_to_na-All_CuTemp_removed,
+          y = ad_all_to_cu-All_NaTemp_removed, 
+          z = ad_all_to_temp-All_NaCu_removed,
           colvar = NULL, 
-          col = c(j.blue, j.blue, j.blue, 
-                  j.red, j.red, j.red),
+          col = j.red,
           pch = 19, 
           cex = 3.5,
-          xlim = c(0, 0.25),
-          ylim = c(0, 0.25),
-          zlim = c(0, 0.25),
+          xlim = c(-0.1, 0.3),
+          ylim = c(-0.1, 0.3),
+          zlim = c(-0.1, 0.3),
           box=FALSE,
           ticktype = "detailed")
 
-scatter3D(x = c(mgrowth_Control_in_Na, 
-                mgrowth_All_in_Na+Cu_removed+Temp_removed),
-          y = c(mgrowth_Control_in_Cu, 
-                mgrowth_All_in_Cu+Na_removed+Temp_removed),
-          z = c(mgrowth_Control_in_Temp, 
-                mgrowth_All_in_Temp+Na_removed+Cu_removed),
+## NaCu ##
+scatter3D(x = ad_nacu_to_na-NaCu_Cu_removed,
+          y = ad_nacu_to_cu-NaCu_Na_removed, 
+          z = ad_nacu_to_temp-NaCu_NaCu_removed,
           colvar = NULL, 
-          col = c(j.blue, j.red),
+          col = j.red,
           pch = 19, 
           cex = 3.5,
-          xlim = c(0, 0.25),
-          ylim = c(0, 0.25),
-          zlim = c(0, 0.25),
-          box=FALSE, 
+          xlim = c(0, 0.3),
+          ylim = c(0, 0.3),
+          zlim = c(0, 0.3),
+          box=FALSE,
           ticktype = "detailed",
           add = T)
 
-scatter3D(x = mgrowth_Control_in_Control,
-          y = mgrowth_Control_in_Control,
-          z = mgrowth_Control_in_Control,
+## NaTemp ##
+scatter3D(x = ad_natemp_to_na-NaTemp_Temp_removed,
+          y = ad_natemp_to_cu-NaTemp_NaTemp_removed, 
+          z = ad_natemp_to_temp-NaTemp_Na_removed,
           colvar = NULL, 
-          col = "black",
+          col = j.red,
           pch = 19, 
-          cex = 2, 
-          xlim = c(0, 0.25),
-          ylim = c(0, 0.25),
-          zlim = c(0, 0.25),
-          box = F, 
+          cex = 3.5,
+          xlim = c(0, 0.3),
+          ylim = c(0, 0.3),
+          zlim = c(0, 0.3),
+          box=FALSE,
+          ticktype = "detailed",
+          add = T)
+
+## CuTemp ##
+scatter3D(x = ad_cutemp_to_na-CuTemp_CuTemp_removed,
+          y = ad_cutemp_to_cu-CuTemp_Temp_removed, 
+          z = ad_cutemp_to_temp-CuTemp_Cu_removed,
+          colvar = NULL, 
+          col = j.red,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(-0.05, 0.3),
+          ylim = c(-0.05, 0.3),
+          zlim = c(-0.05, 0.3),
+          box=FALSE,
+          ticktype = "detailed",
+          add = T)
+
+## Na ##
+scatter3D(x = ad_na_to_na,
+          y = ad_na_to_cu-Na_removed, 
+          z = ad_na_to_temp-Na_removed,
+          colvar = NULL, 
+          col = j.red,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(-0.05, 0.3),
+          ylim = c(-0.05, 0.3),
+          zlim = c(-0.05, 0.3),
+          box=FALSE,
+          ticktype = "detailed",
+          add = T)
+
+## Cu ##
+scatter3D(x = ad_cu_to_na-Cu_removed,
+          y = ad_cu_to_cu, 
+          z = ad_cu_to_temp-Cu_removed,
+          colvar = NULL, 
+          col = j.red,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(-0.05, 0.3),
+          ylim = c(-0.05, 0.3),
+          zlim = c(-0.05, 0.3),
+          box=FALSE,
+          ticktype = "detailed",
+          add = T)
+
+## Temp ##
+scatter3D(x = ad_temp_to_na-Temp_removed,
+          y = ad_temp_to_cu-Temp_removed, 
+          z = ad_temp_to_temp,
+          colvar = NULL, 
+          col = j.red,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(-0.05, 0.3),
+          ylim = c(-0.05, 0.3),
+          zlim = c(-0.05, 0.3),
+          box=FALSE,
+          ticktype = "detailed",
+          add = T)
+
+## Control ##
+scatter3D(x = 0,
+          y = 0, 
+          z = 0,
+          colvar = NULL, 
+          col = j.blue,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(-0.05, 0.3),
+          ylim = c(-0.05, 0.3),
+          zlim = c(-0.05, 0.3),
+          box=FALSE,
           ticktype = "detailed",
           add = T)
 
@@ -1070,135 +1141,273 @@ segments3D(x0 = c(0, 0, 0),
         z1 = c(0, 0, 0.25),
         add = TRUE)
 
-segments3D(x0 = c(0.25, 0.25, 0.25),
-        x1 = c(0.25, 0.25, 0),
-        y0 = c(0.25, 0.25, 0.25),
-        y1 = c(0, 0.25, 0.25),
-        z0 = c(0.25, 0.25, 0.25),
-        z1 = c(0.25, 0, 0.25),
-        add = TRUE)
+#segments3D(x0 = c(0.25, 0.25, 0.25),
+#        x1 = c(0.25, 0.25, 0),
+#        y0 = c(0.25, 0.25, 0.25),
+#        y1 = c(0, 0.25, 0.25),
+#        z0 = c(0.25, 0.25, 0.25),
+#        z1 = c(0.25, 0, 0.25),
+#        add = TRUE)
 
-segments3D(x0 = c(0.25, 0.25, 0.25),
-        x1 = c(0.25, 0.25, 0),
+#segments3D(x0 = c(0.25, 0.25, 0.25),
+#        x1 = c(0.25, 0.25, 0),
+#        y0 = c(0, 0, 0),
+#        y1 = c(0.25, 0, 0),
+#        z0 = c(0, 0, 0.25),
+#        z1 = c(0, 0.25, 0.25),
+#        add = TRUE)
+
+#segments3D(x0 = c(0, 0, 0, 0),
+#        x1 = c(0, 0, 0.25, 0.25),
+#        y0 = c(0.25, 0.25, 0, 0.25),
+#        y1 = c(0.25, 0, 0, 0.25),
+#        z0 = c(0, 0.25, 0.25, 0),
+#        z1 = c(0.25, 0.25, 0.25, 0),
+#        add = TRUE)
+
+
+############ Text ##############
+
+text3D(x = ad_all_to_na-All_CuTemp_removed+0.0065,
+       y = ad_all_to_cu-All_NaTemp_removed+0.0065, 
+       z = ad_all_to_temp-All_NaCu_removed+0.0065,
+       labels = c("SCT", "SCT", "SCT", "SCT"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+text3D(x = ad_nacu_to_na-NaCu_Cu_removed+0.0065,
+       y = ad_nacu_to_cu-NaCu_Na_removed+0.0065, 
+       z = ad_nacu_to_temp-NaCu_NaCu_removed+0.0065,
+       labels = c("SC", "SC", "SC"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+text3D(x = ad_natemp_to_na-NaTemp_Temp_removed+0.0065,
+       y = ad_natemp_to_cu-NaTemp_NaTemp_removed+0.0065, 
+       z = ad_natemp_to_temp-NaTemp_Na_removed+0.0065,
+       labels = c("ST", "ST", "ST"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+text3D(x = ad_cutemp_to_na-CuTemp_CuTemp_removed+0.0065,
+       y = ad_cutemp_to_cu-CuTemp_Temp_removed+0.0065, 
+       z = ad_cutemp_to_temp-CuTemp_Cu_removed+0.0065,
+       labels = c("CT", "CT", "CT", "CT"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+text3D(x = ad_na_to_na+0.0065,
+       y = ad_na_to_cu-Na_removed+0.0065, 
+       z = ad_na_to_temp-Na_removed+0.0065,
+       labels = c("S", "S", "S", "S"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+
+text3D(x = ad_cu_to_na-Cu_removed+0.0065,
+       y = ad_cu_to_cu+0.0065, 
+       z = ad_cu_to_temp-Cu_removed+0.0065,
+       labels = c("C", "C", "C"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+
+text3D(x = ad_temp_to_na-Temp_removed+0.0065,
+       y = ad_temp_to_cu-Temp_removed+0.0065, 
+       z = ad_temp_to_temp+0.0065,
+       labels = c("T", "T", "T", "T"),
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+text3D(x = 0+0.0065,
+       y = 0+0.0065, 
+       z = 0+0.0065,
+       labels = "Con",
+       add = TRUE, 
+       colkey = FALSE, 
+       cex = 0.7, 
+       col = c(rgb(0.5, 0.5, 0.5)))
+
+
+########  Plot and then play/spin as RGL ###########
+
+plotrgl(alpha=0.75, windowRect = c(0, 0, 1000, 1000),
+        zoom = 1.5, smooth = TRUE) 
+
+### Axis ###
+axes3d(c('x', 'y', 'z'),
+       lwd=0.5,
+       col=rgb(0.65, 0.65, 0.65),
+       nticks = 6)
+
+title3d(xlab = "Adaptation to Salt",
+        ylab = "Adaptation to Copper",
+        zlab = "Adaptation to Temperature",
+        col=rgb(0.65, 0.65, 0.65))
+
+
+# play / spin
+
+#play3d( spin3d( axis = c(0, 0, 1), rpm = 2), duration = 30)
+
+
+####### Save as gif ##########
+
+#movie3d(
+#  movie="3_Pareto_a", 
+#  spin3d( axis = c(0, 0, 1), rpm = 2),
+#  type = "gif", 
+#  duration = 30, 
+#  dir = "gif",
+#  clean = T)
+
+
+```
+
+<br>
+
+#### Part b
+
+<br>
+
+```{r, echo=FALSE}
+x.coords = c(0, mean(ad_na_to_na), 0, 0)
+y.coords = c(0, 0, mean(ad_cu_to_cu), 0)
+z.coords = c(0, 0, 0, mean(ad_temp_to_temp))
+
+x.coords_2 = x.coords+0.0055
+y.coords_2 = y.coords+0.0055
+z.coords_2 = z.coords+0.0055
+
+########### Points ###########
+
+scatter3D(x = x.coords, y = y.coords, z = z.coords,
+          colvar = NULL, 
+          col = c(j.blue, j.red, j.red, j.red),
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(0, 0.15),
+          ylim = c(0, 0.15),
+          zlim = c(0, 0.15),
+          box=FALSE,
+          ticktype = "detailed")
+
+scatter3D(x = mean(ad_all_to_na)-All_CuTemp_removed,
+          y = mean(ad_all_to_cu)-All_NaTemp_removed, 
+          z = mean(ad_all_to_temp)-All_NaCu_removed,
+          colvar = NULL, 
+          col = j.red,
+          pch = 19, 
+          cex = 3.5,
+          xlim = c(0, 0.15),
+          ylim = c(0, 0.15),
+          zlim = c(0, 0.15),
+          box=FALSE, 
+          ticktype = "detailed",
+          add = T)
+
+########### Box ############
+
+segments3D(x0 = c(0, 0, 0),
+        x1 = c(0.15, 0, 0),
         y0 = c(0, 0, 0),
-        y1 = c(0.25, 0, 0),
-        z0 = c(0, 0, 0.25),
-        z1 = c(0, 0.25, 0.25),
+        y1 = c(0, 0.15, 0),
+        z0 = c(0, 0, 0),
+        z1 = c(0, 0, 0.15),
         add = TRUE)
 
-segments3D(x0 = c(0, 0, 0, 0),
-        x1 = c(0, 0, 0.25, 0.25),
-        y0 = c(0.25, 0.25, 0, 0.25),
-        y1 = c(0.25, 0, 0, 0.25),
-        z0 = c(0, 0.25, 0.25, 0),
-        z1 = c(0.25, 0.25, 0.25, 0),
-        add = TRUE)
+#segments3D(x0 = c(0.25, 0.25, 0.25),
+#        x1 = c(0.25, 0.25, 0),
+#        y0 = c(0.25, 0.25, 0.25),
+#        y1 = c(0, 0.25, 0.25),
+#        z0 = c(0.25, 0.25, 0.25),
+#        z1 = c(0.25, 0, 0.25),
+#        add = TRUE)
+
+#segments3D(x0 = c(0.25, 0.25, 0.25),
+#        x1 = c(0.25, 0.25, 0),
+#        y0 = c(0, 0, 0),
+#        y1 = c(0.25, 0, 0),
+#        z0 = c(0, 0, 0.25),
+#        z1 = c(0, 0.25, 0.25),
+#        add = TRUE)
+
+#segments3D(x0 = c(0, 0, 0, 0),
+#        x1 = c(0, 0, 0.25, 0.25),
+#        y0 = c(0.25, 0.25, 0, 0.25),
+#        y1 = c(0.25, 0, 0, 0.25),
+#        z0 = c(0, 0.25, 0.25, 0),
+#        z1 = c(0.25, 0.25, 0.25, 0),
+#        add = TRUE)
 
 
 ############ Text ##############
 
 text3D(x = x.coords_2, y = y.coords_2, z = z.coords_2,
-       labels = c("S", "C", "T", "S'", "C'", "T'"),
+       labels = c("Con", "S", "C", "T"),
        add = TRUE, 
        colkey = FALSE, 
        cex = 1)
 
-text3D(x = c(mgrowth_Control_in_Na+0.0065, 
-             mgrowth_All_in_Na+Cu_removed+Temp_removed+0.0065),
-       y = c(mgrowth_Control_in_Cu+0.0065, 
-             mgrowth_All_in_Cu+Na_removed+Temp_removed+0.0065),
-       z = c(mgrowth_Control_in_Temp+0.0065, 
-             mgrowth_All_in_Temp+Na_removed+Cu_removed+0.0065),
-       labels = c("SCT", "SCT'"),
+text3D(x = mean(ad_all_to_na)-All_CuTemp_removed+0.0065,
+       y = mean(ad_all_to_cu)-All_NaTemp_removed+0.0065, 
+       z = mean(ad_all_to_temp)-All_NaCu_removed+0.0065,
+       labels = "SCT",
        add = TRUE, 
        colkey = FALSE, 
        cex = 1)
-
-text3D(x = c(mgrowth_Control_in_Control-0.01),
-       y = c(mgrowth_Control_in_Control-0.01),
-       z = c(mgrowth_Control_in_Control-0.01),
-       labels = c("Baseline Fitness"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 1, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-       
 
 ######### Arrows ##############
 
-arrows3D(x0 = mgrowth_Control_in_Na,
-        x1 = mgrowth_Na_in_Na,
-        y0 = 0.01, 
-        y1 = 0.01,
+arrows3D(x0 = 0,
+        x1 = mean(ad_na_to_na),
+        y0 = 0, 
+        y1 = 0,
         z0 = 0,
         z1 = 0,
         add = TRUE, type = "cone",
         col = j.red, lwd = 3, length = 0.1)
 
-arrows3D(x0 = 0.01,
-        x1 = 0.01,
-        y0 = mgrowth_Control_in_Cu,
-        y1 = mgrowth_Cu_in_Cu,
+arrows3D(x0 = 0,
+        x1 = 0,
+        y0 = 0,
+        y1 = mean(ad_cu_to_cu),
         z0 = 0,
         z1 = 0,
         add = TRUE, type = "cone",
         col = j.red, lwd = 3, length = 0.1)
 
-arrows3D(x0 = 0.01,
-        x1 = 0.01,
-        y0 = 0.01, 
-        y1 = 0.01,
-        z0 = mgrowth_Control_in_Temp,
-        z1 = mgrowth_Temp_in_Temp,
+arrows3D(x0 = 0,
+        x1 = 0,
+        y0 = 0, 
+        y1 = 0,
+        z0 = 0,
+        z1 = mean(ad_temp_to_temp),
         add = TRUE, type = "cone",
         col = j.red, lwd = 3, length = 0.1)
 
-arrows3D(x0 = mgrowth_Control_in_Na,
-        x1 = mgrowth_All_in_Na+Cu_removed+Temp_removed,
-        y0 = mgrowth_Control_in_Cu,
-        y1 = mgrowth_All_in_Cu+Na_removed+Temp_removed,
-        z0 = mgrowth_Control_in_Temp,
-        z1 = mgrowth_All_in_Temp+Na_removed+Cu_removed,
+arrows3D(x0 = 0,
+        x1 = mean(ad_all_to_na)-All_CuTemp_removed,
+        y0 = 0,
+        y1 = mean(ad_all_to_cu)-All_NaTemp_removed,
+        z0 = 0,
+        z1 = mean(ad_all_to_temp)-All_NaCu_removed,
         add = TRUE, type = "cone",
         col = j.red, lwd = 3, length = 0.1)
-
-# Pareto Front 
-
-#col_pareto <- rgb(1, 0.98, 0.98)
-
-#polygon3D(
-#  x = c(0, 0, mgrowth_All_in_Na+Cu_removed+Temp_removed),
-#  y = c(mgrowth_Cu_in_Cu, 0, mgrowth_All_in_Cu+Na_removed+Temp_removed),
-#  z = c(0, mgrowth_Temp_in_Temp, mgrowth_All_in_Temp+Na_removed+Cu_removed),
-#  colvar = NULL,
-#  add = TRUE,
-#  col = col_pareto,
-#  facet = TRUE,
-#  border = j.red#rgb(0.7, 0.7, 0.7)
-#  )
-
-#polygon3D(
-#  x = c(mgrowth_Na_in_Na, 0, mgrowth_All_in_Na+Cu_removed+Temp_removed),
-#  y = c(0, 0, mgrowth_All_in_Cu+Na_removed+Temp_removed),
-#  z = c(0, mgrowth_Temp_in_Temp, mgrowth_All_in_Temp+Na_removed+Cu_removed),
-#  colvar = NULL,
-#  add = TRUE,
-#  col = col_pareto,
-#  facet = TRUE,
-#  border = j.red#rgb(0.7, 0.7, 0.7)
-#  )
-
-#polygon3D(
-#  x = c(mgrowth_Na_in_Na, 0, mgrowth_All_in_Na+Cu_removed+Temp_removed),
-#  y = c(0, mgrowth_Cu_in_Cu, mgrowth_All_in_Cu+Na_removed+Temp_removed),
-#  z = c(0, 0, mgrowth_All_in_Temp+Na_removed+Cu_removed),
-#  colvar = NULL,
-#  add = TRUE,
-#  col = col_pareto,
-#  facet = TRUE,
-#  border = j.red#rgb(0.7, 0.7, 0.7)
-#  )
-
 
 ########  Plot and then play/spin as RGL ###########
 
@@ -1211,9 +1420,9 @@ axes3d(c('x', 'y', 'z'),
        col=rgb(0.65, 0.65, 0.65),
        nticks = 3)
 
-title3d(xlab = "Fitness in Salt",
-        ylab = "Fitness in Copper",
-        zlab = "Fitness in Temperature",
+title3d(xlab = "Adaptation to  Salt",
+        ylab = "Adaptation to  Copper",
+        zlab = "Adaptation to  Temperature",
         col=rgb(0.65, 0.65, 0.65))
 
 
@@ -1231,284 +1440,6 @@ title3d(xlab = "Fitness in Salt",
 #  duration = 30, 
 #  dir = "gif",
 #  clean = T)
-
-
 ```
-
 <br>
 <br>
-
-
-```{r, echo=FALSE}
-
-########### Points ###########
-
-## ALl ##
-scatter3D(x = All_in_Na$mean_growth+Cu_removed+Temp_removed,
-          y = All_in_Cu$mean_growth+Na_removed+Temp_removed, 
-          z = All_in_Temp$mean_growth+Na_removed+Cu_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box=FALSE,
-          ticktype = "detailed")
-
-## NaCu ##
-scatter3D(x = NaCu_in_Na$mean_growth+Cu_removed,
-          y = NaCu_in_Cu$mean_growth+Na_removed, 
-          z = NaCu_in_Temp$mean_growth+Na_removed+Cu_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(0, 0.25),
-          ylim = c(0, 0.25),
-          zlim = c(0, 0.25),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## NaTemp ##
-scatter3D(x = NaTemp_in_Na$mean_growth+Temp_removed,
-          y = NaTemp_in_Cu$mean_growth+Na_removed+Temp_removed, 
-          z = NaTemp_in_Temp$mean_growth+Na_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(0, 0.25),
-          ylim = c(0, 0.25),
-          zlim = c(0, 0.25),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## CuTemp ##
-scatter3D(x = CuTemp_in_Na$mean_growth+Cu_removed+Temp_removed,
-          y = CuTemp_in_Cu$mean_growth+Temp_removed, 
-          z = CuTemp_in_Temp$mean_growth+Cu_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## Na ##
-scatter3D(x = Na_in_Na$mean_growth,
-          y = Na_in_Cu$mean_growth+Na_removed, 
-          z = Na_in_Temp$mean_growth+Na_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## Cu ##
-scatter3D(x = Cu_in_Na$mean_growth+Cu_removed,
-          y = Cu_in_Cu$mean_growth, 
-          z = Cu_in_Temp$mean_growth+Cu_removed,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## Temp ##
-scatter3D(x = Temp_in_Na$mean_growth+Temp_removed,
-          y = Temp_in_Cu$mean_growth+Temp_removed, 
-          z = Temp_in_Temp$mean_growth,
-          colvar = NULL, 
-          col = j.red,
-          pch = 19, 
-          cex = 3.5,
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box=FALSE,
-          ticktype = "detailed",
-          add = T)
-
-## Baseline ##
-scatter3D(x = mgrowth_Control_in_Control,
-          y = mgrowth_Control_in_Control,
-          z = mgrowth_Control_in_Control,
-          colvar = NULL, 
-          col = "black",
-          pch = 19, 
-          cex = 2, 
-          xlim = c(-0.05, 0.35),
-          ylim = c(-0.05, 0.35),
-          zlim = c(-0.05, 0.35),
-          box = F, 
-          ticktype = "detailed",
-          add = T)
-
-########### Box ############
-
-segments3D(x0 = c(0, 0, 0),
-        x1 = c(0.25, 0, 0),
-        y0 = c(0, 0, 0),
-        y1 = c(0, 0.25, 0),
-        z0 = c(0, 0, 0),
-        z1 = c(0, 0, 0.25),
-        add = TRUE)
-
-segments3D(x0 = c(0.25, 0.25, 0.25),
-        x1 = c(0.25, 0.25, 0),
-        y0 = c(0.25, 0.25, 0.25),
-        y1 = c(0, 0.25, 0.25),
-        z0 = c(0.25, 0.25, 0.25),
-        z1 = c(0.25, 0, 0.25),
-        add = TRUE)
-
-segments3D(x0 = c(0.25, 0.25, 0.25),
-        x1 = c(0.25, 0.25, 0),
-        y0 = c(0, 0, 0),
-        y1 = c(0.25, 0, 0),
-        z0 = c(0, 0, 0.25),
-        z1 = c(0, 0.25, 0.25),
-        add = TRUE)
-
-segments3D(x0 = c(0, 0, 0, 0),
-        x1 = c(0, 0, 0.25, 0.25),
-        y0 = c(0.25, 0.25, 0, 0.25),
-        y1 = c(0.25, 0, 0, 0.25),
-        z0 = c(0, 0.25, 0.25, 0),
-        z1 = c(0.25, 0.25, 0.25, 0),
-        add = TRUE)
-
-
-############ Text ##############
-
-
-text3D(x = c(mgrowth_Control_in_Control-0.01),
-       y = c(mgrowth_Control_in_Control-0.01),
-       z = c(mgrowth_Control_in_Control-0.01),
-       labels = c("Baseline Fitness"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 1, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-       
-
-text3D(x = All_in_Na$mean_growth+Cu_removed+Temp_removed+0.0065,
-       y = All_in_Cu$mean_growth+Na_removed+Temp_removed+0.0065, 
-       z = All_in_Temp$mean_growth+Na_removed+Cu_removed+0.0065,
-       labels = c("SCT", "SCT", "SCT", "SCT"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-text3D(x = NaCu_in_Na$mean_growth+Cu_removed+0.0065,
-       y = NaCu_in_Cu$mean_growth+Na_removed+0.0065, 
-       z = NaCu_in_Temp$mean_growth+Na_removed+Cu_removed+0.0065,
-       labels = c("SC", "SC", "SC"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-text3D(x = NaTemp_in_Na$mean_growth+Temp_removed+0.0065,
-       y = NaTemp_in_Cu$mean_growth+Na_removed+Temp_removed+0.0065, 
-       z = NaTemp_in_Temp$mean_growth+Na_removed+0.0065,
-       labels = c("ST", "ST", "ST"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-
-text3D(x = CuTemp_in_Na$mean_growth+Cu_removed+Temp_removed+0.0065,
-       y = CuTemp_in_Cu$mean_growth+Temp_removed+0.0065, 
-       z = CuTemp_in_Temp$mean_growth+Cu_removed+0.0065,
-       labels = c("CT", "CT", "CT", "CT"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-text3D(x = Na_in_Na$mean_growth+0.0065,
-       y = Na_in_Cu$mean_growth+Na_removed+0.0065, 
-       z = Na_in_Temp$mean_growth+Na_removed+0.0065,
-       labels = c("S", "S", "S", "S"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-
-text3D(x = Cu_in_Na$mean_growth+Cu_removed+0.0065,
-       y = Cu_in_Cu$mean_growth+0.0065, 
-       z = Cu_in_Temp$mean_growth+Cu_removed+0.0065,
-       labels = c("C", "C", "C"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-
-text3D(x = Temp_in_Na$mean_growth+Temp_removed+0.0065,
-       y = Temp_in_Cu$mean_growth+Temp_removed+0.0065, 
-       z = Temp_in_Temp$mean_growth+0.0065,
-       labels = c("T", "T", "T", "T"),
-       add = TRUE, 
-       colkey = FALSE, 
-       cex = 0.7, 
-       col = c(rgb(0.5, 0.5, 0.5)))
-
-
-
-########  Plot and then play/spin as RGL ###########
-
-plotrgl(alpha=0.75, windowRect = c(0, 0, 1000, 1000),
-        zoom = 1.5, smooth = TRUE) 
-
-### Axis ###
-axes3d(c('x', 'y', 'z'),
-       lwd=0.5,
-       col=rgb(0.65, 0.65, 0.65),
-       nticks = 3)
-
-title3d(xlab = "Fitness in Salt",
-        ylab = "Fitness in Copper",
-        zlab = "Fitness in Temperature",
-        col=rgb(0.65, 0.65, 0.65))
-
-
-# play / spin
-
-# play3d( spin3d( axis = c(0, 0, 1), rpm = 2), duration = 30)
-
-
-####### Save as gif ##########
-
-#movie3d(
-#  movie="3_Pareto_a", 
-#  spin3d( axis = c(0, 0, 1), rpm = 2),
-#  type = "gif", 
-#  duration = 30, 
-#  dir = "gif",
-#  clean = T)
-
-
-```
