--- a/2_Evolution-Multiple-Stressors_Figures.Rmd
+++ b/2_Evolution-Multiple-Stressors_Figures.Rmd
@@ -14,25 +14,24 @@ output:
 rm(list = ls())           # clear the environment 
 
 # Packages
-library(tidyverse)        # Organising and manipulating data
+library(tidyverse)        # Organizing and manipulating data
 library(gsubfn)           # To use enhance list[] functionality
 library(plotrix)          # To use draw.circle and draw.radial.line
 library(latex2exp)        # To use Tex in figures
-
 ```
-
 
 ### Intro
 
 This R notebook contains the code used to plot the figures in the paper: *Rapid Evolution Generates Synergism Between Multiple Stressors and Complicates Ecological Restoration*. 
 
-Dataframes generated in the `Rotifer-Stressor-Analysis` notebook are used. 
+Data frames generated in the `1_Evolution-Multiple-Stressors_Analysis.Rmd` notebook are used. 
 
 <br>
 
 - **Import data and organise**
 
 ```{r, echo=TRUE, results='hide'}
+# Load in population growth rates (generated in the 1st notebook)
 rot_pop <- read.csv("Data/Outputs/population_growth.csv", header = TRUE, 
                      stringsAsFactors=FALSE)
 
@@ -48,16 +47,19 @@ rot_pop <- rot_pop %>%
     evolline == 7 ~ "CT",
     evolline == 8 ~ "SCT"))
 
+# Load in the data for figure 1c
 growth_trend_data <- read.csv("Data/Outputs/stressor_interactions.csv", 
                                   header = TRUE, stringsAsFactors = FALSE)
-
+# Convert treatment to factor 
 growth_trend_data$treatment_F <- as.factor(growth_trend_data$treatment_F)
 ```
-
 
 - **Make logical subsets**
 
 ```{r, echo=TRUE}
+# rot_pop$treat_num follows the numbering in the "growth_assay_table.png"
+# Naming convention is EvolvedLine_in_Environment
+
 ###### Evolved Population Growth Rates #######
 Na_in_Na <- subset(rot_pop, treat_num == "10")
 Cu_in_Cu <- subset(rot_pop, treat_num == "19")
@@ -90,9 +92,6 @@ CuTemp_in_Temp <- subset(rot_pop, treat_num == "52")
 All_in_Na <- subset(rot_pop, treat_num == "58")
 All_in_Cu <- subset(rot_pop, treat_num == "59")
 All_in_Temp <- subset(rot_pop, treat_num == "60")
-Na_in_Control <- subset(rot_pop, treat_num == "9")
-Cu_in_Control <- subset(rot_pop, treat_num == "17")
-Temp_in_Control <- subset(rot_pop, treat_num == "25")
 Na_in_Cu <- subset(rot_pop, treat_num == "11")
 Cu_in_Na <- subset(rot_pop, treat_num == "18")
 Na_in_Temp <- subset(rot_pop, treat_num == "12")
@@ -100,7 +99,7 @@ Temp_in_Na <- subset(rot_pop, treat_num == "26")
 Cu_in_Temp <- subset(rot_pop, treat_num == "20")
 Temp_in_Cu <- subset(rot_pop, treat_num == "27")
 
-#### For Removal of Stressors - figure 3#####
+#### For Removal of Stressors #####
 Na_in_Control <- subset(rot_pop, treat_num == "9")
 Cu_in_Control <- subset(rot_pop, treat_num == "17")
 Temp_in_Control <- subset(rot_pop, treat_num == "25")
@@ -108,9 +107,10 @@ NaCu_in_Control <- subset(rot_pop, treat_num == "33")
 NaTemp_in_Control <- subset(rot_pop, treat_num == "41")
 CuTemp_in_Control <- subset(rot_pop, treat_num == "49")
 All_in_Control <- subset(rot_pop, treat_num == "57")
-
+All_in_NaCu <- subset(rot_pop, treat_num == "61")
+All_in_NaTemp <- subset(rot_pop, treat_num == "62")
+All_in_CuTemp <- subset(rot_pop, treat_num == "63")
 ```
-
 
 ### Figure 1 
 
@@ -121,9 +121,7 @@ All_in_Control <- subset(rot_pop, treat_num == "57")
 Mean effects with standard error of stressor effects ([detaials](https://www.meta-analysis.com/downloads/Meta-analysis%20Effect%20sizes%20based%20on%20means.pdf)) 
 
 ```{r, echo=TRUE}
-
 ## Some functions to speed things up
-
 std.error <- function(x){ 
   return( sqrt( var(x) / length(x) ) ) 
   }
@@ -225,7 +223,6 @@ layout(matrix(c(1, 5,
 
 
 ###### NaCu #######
-
 par(mar=c(2, 6, 8, 2)) # bottom, left, top, right
 
 NaCu.bar <- barplot(c(rawD_na_on_c, 
@@ -309,7 +306,6 @@ points(x = c(10.75, 10.75, 10.75),
 
 
 ####################### NaTemp####################### 
-
 par(mar=c(4, 6, 6, 2)) # bottom, left, top, right
 
 NaTemp.bar <- barplot(c(rawD_na_on_c, 
@@ -394,7 +390,6 @@ points(x = c(10.75, 10.75, 10.75),
 
 
 ####################### CuTemp####################### 
-
 par(mar=c(6, 6, 4, 2)) # bottom, left, top, right
 
 CuTemp.bar <- barplot(c(rawD_cu_on_c, 
@@ -477,8 +472,8 @@ points(x = c(10.75, 10.75, 10.75, 10.75),
        y = mgrowth_Control_in_Control-CuTemp_in_CuTemp$mean_growth,
        col = rgb(0, 0, 0, 0.05), bg = j.red_alpha, pch = 21, cex = 1)
 
-####################### All####################### 
 
+####################### All####################### 
 par(mar=c(8, 6, 2, 2)) # bottom, left, top, right
 
 
@@ -580,7 +575,6 @@ points(x = c(12.5, 12.5, 12.5, 12.5),
 
 
 ####################### Hedges g ############################
-
 par(mar=c(4, 12, 4, 6)) # bottom, left, top, right
 
 col_factor <- c(j.blue, j.red)[growth_trend_data$treatment_F]
@@ -632,14 +626,13 @@ points(c(growth_trend_data$treatment_J[5], growth_trend_data$treatment_J[6],
          growth_trend_data$effect1[7], growth_trend_data$effect1[8]),
        pch = 19, col = j.red, cex=7)
 
-text(growth_trend_data$effect1 ~ growth_trend_data$treatment_J, labels=growth_trend_data$number, family = "Times", cex = 1.5, 
+text(growth_trend_data$effect1 ~ growth_trend_data$treatment_J, 
+     labels=growth_trend_data$number, family = "Times", cex = 1.5, 
      col = rgb(0.3, 0.3, 0.3))
-
-
 ```
 <br>
 
-### Figure 2 - no data
+### Figure 2 - no data (made in powerpoint)
 
 <br>
 
@@ -649,10 +642,10 @@ text(growth_trend_data$effect1 ~ growth_trend_data$treatment_J, labels=growth_tr
 
 - **Coordinates for diagonal axis** 
 
-This is for the third, diagonal axis (defining the combined effect of stressors).Just divide by two to project onto the diagonal. 
+This is for the third, diagonal axis in Figure 3a. Just divide by two to project onto the diagonal - this is just a way of representing additivity between stressors.  
 
 ```{r, echo=TRUE}
-
+# Input x and return its diagonal coordinates (x/2)
 coord <- function(x){
   return(x/2)
 }
@@ -707,12 +700,10 @@ coord_cutemp_evo_pop <- coord(mgrowth_Control_in_Control-
 coord_all_evo_pop <- coord(mgrowth_Control_in_Control-
                                   All_in_All$mean_growth)
 
-#### additive expectation for 3D video #####
+#### additive expectation for supplementary video 1 #####
 coord_all_con_add <- coord(rawD_na_on_c+rawD_cu_on_c+rawD_temp_on_c)
 coord_all_evo_add <- coord(rawD_na_on_e+rawD_cu_on_e+rawD_temp_on_e)
-
 ```
-
 
 - **Plot figure 3(a)**
 
@@ -890,7 +881,6 @@ points(y = coord_natemp_evo_pop,
 
 ################################# CuTemp #######################################
 
-
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
      xlim=c(-0.05, 0.205), ylim=c(-0.05, 0.205)) 
@@ -974,16 +964,13 @@ points(y = coord_cutemp_con_pop,
 points(y = coord_cutemp_evo_pop,
        x = coord_cutemp_evo_pop,
        col = rgb(0, 0, 0, 0.05), bg = j.red_alpha, pch = 21, cex = 1.75)
-
-
 ```
 
 <br>
 
-- **Calculate means of populations and cost of removing stressors** 
+- **Calculate means of populations** 
 
 ```{r, echo=TRUE}
-
 ### gathering mean data points 
 mgrowth_NaCu_in_Na <- mean(NaCu_in_Na$mean_growth)
 mgrowth_NaCu_in_Cu <- mean(NaCu_in_Cu$mean_growth)
@@ -997,11 +984,98 @@ mgrowth_All_in_Temp <- mean(All_in_Temp$mean_growth)
 mgrowth_Na_in_Control <- mean(Na_in_Control$mean_growth)
 mgrowth_Cu_in_Control <- mean(Cu_in_Control$mean_growth)
 mgrowth_Temp_in_Control <- mean(Temp_in_Control$mean_growth)
+mgrowth_All_in_NaCu <- mean(All_in_NaCu$mean_growth)
+mgrowth_All_in_NaTemp <- mean(All_in_NaTemp$mean_growth)
+mgrowth_All_in_CuTemp <- mean(All_in_CuTemp$mean_growth)
+```
 
-### So that removing a stressor can be accounted for ### 
-Na_removed <- mgrowth_Na_in_Na-mgrowth_Na_in_Control 
-Cu_removed <- mgrowth_Cu_in_Cu-mgrowth_Cu_in_Control
-Temp_removed <- mgrowth_Temp_in_Temp-mgrowth_Temp_in_Control
+- **Calculate adaptations** 
+
+```{r, echo=TRUE}
+# ad_na_to_cu = the adaptation of the na evolved line in the cu environment 
+# it is the difference in fitness between the non-evolved line (control)
+
+#### NA ####
+ad_na_to_na <- Na_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_na_to_cu <- Na_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_na_to_temp <- Na_in_Temp$mean_growth - mgrowth_Control_in_Temp
+
+#### CU ####
+ad_cu_to_na <- Cu_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_cu_to_cu <- Cu_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_cu_to_temp <- Cu_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### TEMP ####
+ad_temp_to_na <- Temp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_temp_to_cu <- Temp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_temp_to_temp <- Temp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### NACU ####
+ad_nacu_to_na <- NaCu_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_nacu_to_cu <- NaCu_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_nacu_to_temp <- NaCu_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### NATEMP ####
+ad_natemp_to_na <- NaTemp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_natemp_to_cu <- NaTemp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_natemp_to_temp <- NaTemp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### CUTEMP ####
+ad_cutemp_to_na <- CuTemp_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_cutemp_to_cu <- CuTemp_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_cutemp_to_temp <- CuTemp_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+
+#### ALL ####
+ad_all_to_na <- All_in_Na$mean_growth - mgrowth_Control_in_Na
+ad_all_to_cu <- All_in_Cu$mean_growth - mgrowth_Control_in_Cu
+ad_all_to_temp <- All_in_Temp$mean_growth - mgrowth_Control_in_Temp 
+```
+
+- **Calculate removal effect** 
+
+```{r, echo=TRUE}
+# See supplementary note for an explanation of why this step is required 
+# The growth rate of NaCu in Cu contains the ad_nacu_to_cu 
+# But it also contains the removal effect (i.e. maladaptation) of removing na 
+# We don't have access to this information directly 
+# So we make approximations based on the information we do have 
+
+### Effect of removing a stressor
+Na_removed <- mgrowth_Na_in_Control-mgrowth_Control_in_Control
+Cu_removed <- mgrowth_Cu_in_Control-mgrowth_Control_in_Control
+Temp_removed <- mgrowth_Temp_in_Control-mgrowth_Control_in_Control
+
+### For the different evolved lines  
+NaCu_Na_removed <- Na_removed
+NaCu_Cu_removed <- Cu_removed
+NaTemp_Na_removed <- Na_removed
+NaTemp_Temp_removed <- Temp_removed
+CuTemp_Cu_removed <- Cu_removed
+CuTemp_Temp_removed <- Temp_removed
+
+######### Special case of three stressors ###########
+# Using information about double evolved lines in their own environment
+# Explanation in supplementary note:  all_performance = 0.5*Adj*colvec
+# all_performance is what we want (performance space coordinates)
+# col_vec is what we know (adaptation of abc to ab/ac/bc) and removal of a/b/c
+# Adj = adjoint matrix, details in supplementary note 
+
+# Defining colvec
+colvec_1 <- (mgrowth_All_in_NaCu-mgrowth_Control_in_NaCu)-Temp_removed
+colvec_2 <- (mgrowth_All_in_NaTemp-mgrowth_Control_in_NaTemp)-Cu_removed
+colvec_3 <- (mgrowth_All_in_CuTemp-mgrowth_Control_in_CuTemp)-Na_removed
+colvec <- c(colvec_1, colvec_2, colvec_3)
+
+# Definig Adj
+Adj <- matrix(c(1, 1, -1, 1, -1, 1, -1, 1, 1), nrow=3)
+
+# Calculating perfomrnace space coordinates
+all_performance <- 0.5*Adj%*%colvec      #   %*% is matrix multiplication
+
+# Calculate the removal effect (to be consistent with older code)
+All_CuTemp_removed <- mean(ad_all_to_na)- all_performance[1]
+All_NaTemp_removed <- mean(ad_all_to_cu) - all_performance[2]
+All_NaCu_removed <- mean(ad_all_to_temp) - all_performance[3]
 ```
 
 - **Plot figure 3(b)**
@@ -1012,373 +1086,326 @@ layout(matrix(c(1, 2, 3,
                 4, 5, 6),
               nrow=2, byrow=TRUE))
 
+####################### Top Row ################################
 
 ############ NaCu Raw Data ############
 
+### Empty plot
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
+### x axis
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
+### y axis
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
+### Control point ### 
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-### Control points ### 
-points(x = Control_in_Na$mean_growth,
-       y = Control_in_Cu$mean_growth,
-       col = j.blue_alpha, pch = 19, cex = 5)
-
-points(x = c(Na_in_Na$mean_growth, 
-             Cu_in_Na$mean_growth+Cu_removed),
-       y = c(Na_in_Cu$mean_growth+Na_removed, 
-             Cu_in_Cu$mean_growth),
+### Single evolved
+points(x = c(ad_na_to_na, 
+             ad_cu_to_na-Cu_removed),
+       y = c(ad_na_to_cu-Na_removed, 
+             ad_cu_to_cu),
        col = j.red, pch = 19, cex = 5)
 
-points(x = NaCu_in_Na$mean_growth+Cu_removed,
-       y = NaCu_in_Cu$mean_growth+Na_removed,
+### Double evolved 
+points(x = ad_nacu_to_na-NaCu_Cu_removed,
+       y = ad_nacu_to_cu-NaCu_Na_removed,
        col = j.red, pch = 19, cex = 5)
 
-text(x = c(Na_in_Na$mean_growth, 
-           Cu_in_Na$mean_growth+Cu_removed, 
-           NaCu_in_Na$mean_growth+Cu_removed),
-       y = c(Na_in_Cu$mean_growth+Na_removed, 
-             Cu_in_Cu$mean_growth, 
-             NaCu_in_Cu$mean_growth+Na_removed),
+### Labels 
+text(x = c(ad_na_to_na, 
+           ad_cu_to_na-Cu_removed,
+           ad_nacu_to_na-NaCu_Cu_removed),
+     y = c(ad_na_to_cu-Na_removed, 
+           ad_cu_to_cu,
+           ad_nacu_to_cu-NaCu_Na_removed),
      labels=c(Na_in_Na$label, 
               Cu_in_Cu$label,
               NaCu_in_NaCu$label), 
      family = "Times", cex = 1.5, col = rgb(0.3, 0.3, 0.3))
 
 
-points(x = mgrowth_Control_in_Control,
-       y = mgrowth_Control_in_Control,
-       col = "black", pch = 19, cex = 2)
-
-
 ############ NaTemp Raw Data ############
 
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
-### Control points ### 
-points(x = Control_in_Na$mean_growth,
-       y = Control_in_Temp$mean_growth,
-       col = j.blue_alpha, pch = 19, cex = 5)
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-points(x = c(Na_in_Na$mean_growth, 
-             Temp_in_Na$mean_growth+Temp_removed),
-       y = c(Na_in_Temp$mean_growth+Na_removed, 
-             Temp_in_Temp$mean_growth),
+points(x = c(ad_na_to_na, 
+             ad_temp_to_na-Temp_removed),
+       y = c(ad_na_to_temp-Na_removed, 
+             ad_temp_to_temp),
        col = j.red, pch = 19, cex = 5)
 
-points(x = NaTemp_in_Na$mean_growth+Temp_removed,
-       y = NaTemp_in_Temp$mean_growth+Na_removed,
+points(x = ad_natemp_to_na-NaTemp_Temp_removed,
+       y = ad_natemp_to_temp-NaTemp_Na_removed,
        col = j.red, pch = 19, cex = 5)
 
-text(x = c(Na_in_Na$mean_growth, 
-             Temp_in_Na$mean_growth+Temp_removed, 
-             NaTemp_in_Na$mean_growth+Temp_removed),
-       y = c(Na_in_Temp$mean_growth+Na_removed, 
-             Temp_in_Temp$mean_growth, 
-             NaTemp_in_Temp$mean_growth+Na_removed),
+text(x = c(ad_na_to_na, 
+           ad_temp_to_na-Temp_removed,
+           ad_natemp_to_na-NaTemp_Temp_removed),
+     y = c(ad_na_to_temp-Na_removed, 
+           ad_temp_to_temp,
+           ad_natemp_to_temp-NaTemp_Na_removed),
      labels=c(Na_in_Na$label, 
               Temp_in_Temp$label,
               NaTemp_in_NaTemp$label), 
      family = "Times", cex = 1.5, col = rgb(0.3, 0.3, 0.3))
 
-points(x = mgrowth_Control_in_Control,
-       y = mgrowth_Control_in_Control,
-       col = "black", pch = 19, cex = 2)
 
 ############ CuTemp Raw Data ############
 
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
-### Control points ### 
-points(x = Control_in_Cu$mean_growth,
-       y = Control_in_Temp$mean_growth,
-       col = j.blue_alpha, pch = 19, cex = 5)
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-points(x = c(Cu_in_Cu$mean_growth, 
-             Temp_in_Cu$mean_growth+Temp_removed),
-       y = c(Cu_in_Temp$mean_growth+Cu_removed, 
-             Temp_in_Temp$mean_growth),
+points(x = c(ad_cu_to_cu, 
+             ad_temp_to_cu-Temp_removed),
+       y = c(ad_cu_to_temp-Cu_removed, 
+             ad_temp_to_temp),
        col = j.red, pch = 19, cex = 5)
 
-points(x = CuTemp_in_Cu$mean_growth+Temp_removed,
-       y = CuTemp_in_Temp$mean_growth+Cu_removed,
+points(x = ad_cutemp_to_cu-CuTemp_Temp_removed,
+       y = ad_cutemp_to_temp-CuTemp_Cu_removed,
        col = j.red, pch = 19, cex = 5)
 
-text(x = c(Cu_in_Cu$mean_growth, 
-             Temp_in_Cu$mean_growth+Temp_removed, 
-             CuTemp_in_Cu$mean_growth+Temp_removed),
-       y = c(Cu_in_Temp$mean_growth+Cu_removed, 
-             Temp_in_Temp$mean_growth, 
-             CuTemp_in_Temp$mean_growth+Cu_removed),
+text(x = c(ad_cu_to_cu, 
+           ad_temp_to_cu-Temp_removed,
+           ad_cutemp_to_cu-CuTemp_Temp_removed),
+     y = c(ad_cu_to_temp-Cu_removed, 
+           ad_temp_to_temp,
+           ad_cutemp_to_temp-CuTemp_Cu_removed),
      labels=c(Cu_in_Cu$label, 
               Temp_in_Temp$label,
               CuTemp_in_CuTemp$label), 
      family = "Times", cex = 1.5, col = rgb(0.3, 0.3, 0.3))
 
-points(x = mgrowth_Control_in_Control,
-       y = mgrowth_Control_in_Control,
-       col = "black", pch = 19, cex = 2)
 
-################# Bottom ####################
+####################### Bottom Row ################################
 
 ############ NaCu Means  ############
 
+### Empty plot
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
+### x axis
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
+### y axis
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
+### Control point ### 
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-points(x = c(mgrowth_Control_in_Na, mgrowth_NaCu_in_Na+Cu_removed, mgrowth_Control_in_Control),
-       y = c(mgrowth_Control_in_Cu, mgrowth_NaCu_in_Cu+Na_removed, mgrowth_Control_in_Control),
-       col = c(j.blue, j.red, "black"), pch = 19, cex = c(8, 8, 2))
+### Evolved means (singles projected) ### 
+points(x = c(mean(ad_na_to_na),
+             0,
+             mean(ad_nacu_to_na)-NaCu_Cu_removed),
+       y = c(0,
+             mean(ad_cu_to_cu),
+             mean(ad_nacu_to_cu-NaCu_Na_removed)),
+       col = j.red, pch = 19, cex = 7)
 
-points(x = c(mgrowth_Control_in_Na, 0, mgrowth_Na_in_Na, 0),
-       y = c(0, mgrowth_Control_in_Cu, 0, mgrowth_Cu_in_Cu),
-       col = c(j.blue, j.blue, j.red, j.red), pch = 19, cex = 8)
-
-arrows(x0 = c(mgrowth_Control_in_Na+segrowth_Control_in_Na, 
-              mgrowth_Na_in_Na+segrowth_Na_in_Na,
-             0, 0),
-      x1 = c(mgrowth_Control_in_Na-segrowth_Control_in_Na, 
-              mgrowth_Na_in_Na-segrowth_Na_in_Na,
-             0, 0),
-      y0 = c(0, 0,
-             mgrowth_Control_in_Cu+segrowth_Control_in_Cu, 
-             mgrowth_Cu_in_Cu+segrowth_Cu_in_Cu),
-      y1 = c(0, 0,
-             mgrowth_Control_in_Cu-segrowth_Control_in_Cu, 
-             mgrowth_Cu_in_Cu-segrowth_Cu_in_Cu),
-       col = c(j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
-
-arrows(x0 = c(mgrowth_Control_in_Na+segrowth_Control_in_Na,
-              mgrowth_NaCu_in_Na+std.error(NaCu_in_Na$mean_growth)+Cu_removed,
-              mgrowth_Control_in_Na, 
-              mgrowth_NaCu_in_Na+Cu_removed), 
+### Error Bars for singles ### 
+arrows(x0 = c(mean(ad_na_to_na)+std.error(ad_na_to_na), 0),
+       y0 = c(0, mean(ad_cu_to_cu)+std.error(ad_cu_to_cu)),
+       x1 = c(mean(ad_na_to_na)-std.error(ad_na_to_na), 0),
+       y1 = c(0, mean(ad_cu_to_cu)-std.error(ad_cu_to_cu)),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
        
-       x1 = c(mgrowth_Control_in_Na-segrowth_Control_in_Na,
-              mgrowth_NaCu_in_Na-std.error(NaCu_in_Na$mean_growth)+Cu_removed,
-              mgrowth_Control_in_Na, 
-              mgrowth_NaCu_in_Na+Cu_removed), 
+### Horizontal Error Bar for multiples ### 
+arrows(x0 = mean(ad_nacu_to_na)-NaCu_Cu_removed+std.error(ad_nacu_to_na),
+       x1 = mean(ad_nacu_to_na)-NaCu_Cu_removed-std.error(ad_nacu_to_na),
+       y0 = mean(ad_nacu_to_cu)-NaCu_Na_removed,
+       y1 = mean(ad_nacu_to_cu)-NaCu_Na_removed,
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
+
+### Vertical Error Bar for multiples ### 
+arrows(x0 = mean(ad_nacu_to_na)-NaCu_Cu_removed,
+       x1 = mean(ad_nacu_to_na)-NaCu_Cu_removed,
+       y0 = mean(ad_nacu_to_cu)-NaCu_Na_removed+std.error(ad_nacu_to_cu),
+       y1 = mean(ad_nacu_to_cu)-NaCu_Na_removed-std.error(ad_nacu_to_cu),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
        
-       y0 = c(mgrowth_Control_in_Cu, 
-              mgrowth_NaCu_in_Cu+Na_removed,
-              mgrowth_Control_in_Cu+segrowth_Control_in_Cu,
-              mgrowth_NaCu_in_Cu+std.error(NaCu_in_Cu$mean_growth)+Na_removed), 
-       
-       y1 = c(mgrowth_Control_in_Cu, 
-              mgrowth_NaCu_in_Cu+Na_removed, 
-              mgrowth_Control_in_Cu-segrowth_Control_in_Cu,
-              mgrowth_NaCu_in_Cu-std.error(NaCu_in_Cu$mean_growth)+Na_removed),
-       col = c(j.blue, j.red, j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
-
-
-
-text(x = c(mgrowth_Control_in_Na, 0, mgrowth_Na_in_Na, 0),
-       y = c(0, mgrowth_Control_in_Cu, 0, mgrowth_Cu_in_Cu),
-     labels = c("S", "C", "S'", "C'"), family = "Times", 
+### Evolved means (singles projected) ### 
+text(x = c(mean(ad_na_to_na),
+             0,
+             mean(ad_nacu_to_na)-NaCu_Cu_removed),
+       y = c(0,
+             mean(ad_cu_to_cu),
+             mean(ad_nacu_to_cu-NaCu_Na_removed)),
+     labels = c("S", "C", "SC"), family = "Times", 
      col = rgb(0.4, 0.4, 0.4), cex = 2)
 
-text(x = c(mgrowth_Control_in_Na, mgrowth_NaCu_in_Na+Cu_removed),
-     y = c(mgrowth_Control_in_Cu, mgrowth_NaCu_in_Cu+Na_removed),
-     labels = c("SC", "SC'"), family = "Times", 
-     col = rgb(0.4, 0.4, 0.4), cex = 2)
 
 ############ NaTemp Means  ############
 
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-points(x = c(mgrowth_Control_in_Na, mgrowth_NaTemp_in_Na+Temp_removed, mgrowth_Control_in_Control),
-       y = c(mgrowth_Control_in_Temp, mgrowth_NaTemp_in_Temp+Na_removed, mgrowth_Control_in_Control),
-       col = c(j.blue, j.red, "black"), pch = 19, cex = c(8, 8, 2))
+points(x = c(mean(ad_na_to_na),
+             0,
+             mean(ad_natemp_to_na-NaTemp_Temp_removed)),
+       y = c(0,
+             mean(ad_temp_to_temp),
+             mean(ad_natemp_to_temp-NaTemp_Na_removed)),
+       col = j.red, pch = 19, cex = 7)
 
-
-points(x = c(mgrowth_Control_in_Na, 0, mgrowth_Na_in_Na, 0),
-       y = c(0, mgrowth_Control_in_Temp, 0, mgrowth_Temp_in_Temp),
-       col = c(j.blue, j.blue, j.red, j.red), pch = 19, cex = 8)
-
-
-arrows(x0 = c(mgrowth_Control_in_Na+segrowth_Control_in_Na, 
-              mgrowth_Na_in_Na+segrowth_Na_in_Na,
-             0, 0),
-      x1 = c(mgrowth_Control_in_Na-segrowth_Control_in_Na, 
-              mgrowth_Na_in_Na-segrowth_Na_in_Na,
-             0, 0),
-      y0 = c(0, 0,
-             mgrowth_Control_in_Temp+segrowth_Control_in_Temp, 
-             mgrowth_Temp_in_Temp+segrowth_Temp_in_Temp),
-      y1 = c(0, 0,
-             mgrowth_Control_in_Temp-segrowth_Control_in_Temp, 
-              mgrowth_Temp_in_Temp-segrowth_Temp_in_Temp),
-       col = c(j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
-
-arrows(x0 = c(mgrowth_Control_in_Na+segrowth_Control_in_Na,
-              mgrowth_NaTemp_in_Na+std.error(NaTemp_in_Na$mean_growth)+Temp_removed,
-              mgrowth_Control_in_Na, 
-              mgrowth_NaTemp_in_Na+Temp_removed), 
+arrows(x0 = c(mean(ad_na_to_na)+std.error(ad_na_to_na), 0),
+       y0 = c(0, mean(ad_temp_to_temp)+std.error(ad_temp_to_temp)),
+       x1 = c(mean(ad_na_to_na)-std.error(ad_na_to_na), 0),
+       y1 = c(0, mean(ad_temp_to_temp)-std.error(ad_temp_to_temp)),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
        
-       x1 = c(mgrowth_Control_in_Na-segrowth_Control_in_Na,
-              mgrowth_NaTemp_in_Na-std.error(NaTemp_in_Na$mean_growth)+Temp_removed,
-              mgrowth_Control_in_Na, 
-              mgrowth_NaTemp_in_Na+Temp_removed), 
-       
-       y0 = c(mgrowth_Control_in_Temp, 
-              mgrowth_NaTemp_in_Temp+Na_removed,
-              mgrowth_Control_in_Temp+segrowth_Control_in_Temp,
-              mgrowth_NaTemp_in_Temp+std.error(NaTemp_in_Temp$mean_growth)+Na_removed), 
-       
-       y1 = c(mgrowth_Control_in_Temp, 
-              mgrowth_NaTemp_in_Temp+Na_removed, 
-              mgrowth_Control_in_Temp-segrowth_Control_in_Temp,
-              mgrowth_NaTemp_in_Temp-std.error(NaTemp_in_Temp$mean_growth)+Na_removed),
-       col = c(j.blue, j.red, j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
+arrows(x0 = mean(ad_natemp_to_na)-NaTemp_Temp_removed
+       +std.error(ad_natemp_to_na),
+       x1 = mean(ad_natemp_to_na)-NaTemp_Temp_removed
+       -std.error(ad_natemp_to_na),
+       y0 = mean(ad_natemp_to_temp)-NaTemp_Na_removed,
+       y1 = mean(ad_natemp_to_temp)-NaTemp_Na_removed,
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
 
-text(x = c(mgrowth_Control_in_Na, 0, mgrowth_Na_in_Na, 0),
-       y = c(0, mgrowth_Control_in_Temp, 0, mgrowth_Temp_in_Temp),
-     labels = c("S", "T", "S'", "T'"), family = "Times", 
+arrows(x0 = mean(ad_natemp_to_na)-NaTemp_Temp_removed,
+       x1 = mean(ad_natemp_to_na)-NaTemp_Temp_removed,
+       y0 = mean(ad_natemp_to_temp)-NaTemp_Na_removed
+       +std.error(ad_natemp_to_temp),
+       y1 = mean(ad_natemp_to_temp)-NaTemp_Na_removed
+       -std.error(ad_natemp_to_temp),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
+       
+text(x = c(mean(ad_na_to_na),
+             0,
+             mean(ad_natemp_to_na-NaTemp_Temp_removed)),
+       y = c(0,
+             mean(ad_temp_to_temp),
+             mean(ad_natemp_to_temp-NaTemp_Na_removed)),
+     labels = c("S", "T", "ST"), family = "Times", 
      col = rgb(0.4, 0.4, 0.4), cex = 2)
 
-text(x = c(mgrowth_Control_in_Na, mgrowth_NaTemp_in_Na+Temp_removed),
-     y = c(mgrowth_Control_in_Temp, mgrowth_NaTemp_in_Temp+Na_removed),
-     labels = c("ST", "ST'"), family = "Times", 
-     col = rgb(0.4, 0.4, 0.4), cex = 2)
 
 ############ CuTemp Means  ############
 
 plot(1, type="n", xlab="", ylab="", bty = "n", yaxt = 'n', xaxt = 'n',
      cex.main = 2.5,
-     xlim=c(-0.01, 0.26), ylim=c(-0.01, 0.26))
+     xlim=c(-0.0625, 0.2), ylim=c(-0.0625, 0.2))
 
 axis(side = 1, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
 axis(side = 2, pos = 0.0,
-     at = c(0.0, 0.05, 0.1, 0.15, 0.2, 0.25), 
-     labels = c("", "5", "10", "15", "20", "25"),
+     at = c(-0.1, -0.05, 0.0, 0.05, 0.1, 0.15, 0.2), 
+     labels = c("-10", "-5", "", "5", "10", "15", "20"),
      cex.axis=2, las=1, lwd=1, lwd.ticks = 1)
 
-points(x = c(mgrowth_Control_in_Cu, mgrowth_CuTemp_in_Cu+Temp_removed, mgrowth_Control_in_Control),
-       y = c(mgrowth_Control_in_Temp, mgrowth_CuTemp_in_Temp+Cu_removed, mgrowth_Control_in_Control),
-       col = c(j.blue, j.red, "black"), pch = 19, cex = c(8, 8, 2))
+points(x = 0,
+       y = 0,
+       col = j.blue, pch = 19, cex = 8)
 
-points(x = c(mgrowth_Control_in_Cu, 0, mgrowth_Cu_in_Cu, 0),
-       y = c(0, mgrowth_Control_in_Temp, 0, mgrowth_Temp_in_Temp),
-       col = c(j.blue, j.blue, j.red, j.red), pch = 19, cex = 8)
+points(x = c(mean(ad_cu_to_cu),
+             0,
+             mean(ad_cutemp_to_cu-CuTemp_Temp_removed)),
+       y = c(0,
+             mean(ad_temp_to_temp),
+             mean(ad_cutemp_to_temp-CuTemp_Cu_removed)),
+       col = j.red, pch = 19, cex = 7)
 
-
-arrows(x0 = c(mgrowth_Control_in_Cu+segrowth_Control_in_Cu, 
-              mgrowth_Cu_in_Cu+segrowth_Cu_in_Cu,
-             0, 0),
-      x1 = c(mgrowth_Control_in_Cu-segrowth_Control_in_Cu, 
-             mgrowth_Cu_in_Cu-segrowth_Cu_in_Cu, 
-             0, 0),
-      y0 = c(0, 0,
-             mgrowth_Control_in_Temp+segrowth_Control_in_Temp, 
-             mgrowth_Temp_in_Temp+segrowth_Temp_in_Temp),
-      y1 = c(0, 0,
-             mgrowth_Control_in_Temp-segrowth_Control_in_Temp, 
-              mgrowth_Temp_in_Temp-segrowth_Temp_in_Temp),
-       col = c(j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
-
-
-arrows(x0 = c(mgrowth_Control_in_Cu+segrowth_Control_in_Cu,
-              mgrowth_CuTemp_in_Cu+std.error(CuTemp_in_Cu$mean_growth)+Temp_removed,
-              mgrowth_Control_in_Cu, 
-              mgrowth_CuTemp_in_Cu+Temp_removed), 
+arrows(x0 = c(mean(ad_cu_to_cu)+std.error(ad_cu_to_cu), 0),
+       y0 = c(0, mean(ad_temp_to_temp)+std.error(ad_temp_to_temp)),
+       x1 = c(mean(ad_cu_to_cu)-std.error(ad_cu_to_cu), 0),
+       y1 = c(0, mean(ad_temp_to_temp)-std.error(ad_temp_to_temp)),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
        
-       x1 = c(mgrowth_Control_in_Cu-segrowth_Control_in_Cu,
-              mgrowth_CuTemp_in_Cu-std.error(CuTemp_in_Cu$mean_growth)+Temp_removed,
-              mgrowth_Control_in_Cu, 
-              mgrowth_CuTemp_in_Cu+Temp_removed), 
-       
-       y0 = c(mgrowth_Control_in_Temp, 
-              mgrowth_CuTemp_in_Temp+Cu_removed,
-              mgrowth_Control_in_Temp+segrowth_Control_in_Temp,
-              mgrowth_CuTemp_in_Temp+std.error(CuTemp_in_Temp$mean_growth)+Cu_removed), 
-       
-       y1 = c(mgrowth_Control_in_Temp, 
-              mgrowth_CuTemp_in_Temp+Cu_removed, 
-              mgrowth_Control_in_Temp-segrowth_Control_in_Temp,
-              mgrowth_CuTemp_in_Temp-std.error(CuTemp_in_Temp$mean_growth)+Cu_removed),
-       col = c(j.blue, j.red, j.blue, j.red),
-       code = 3, length = 0.07, angle = 90, lwd = 4)
-                
+arrows(x0 = mean(ad_cutemp_to_cu)-CuTemp_Temp_removed
+       +std.error(ad_natemp_to_cu),
+       x1 = mean(ad_cutemp_to_cu)-CuTemp_Temp_removed
+       -std.error(ad_natemp_to_cu),
+       y0 = mean(ad_cutemp_to_temp)-CuTemp_Cu_removed,
+       y1 = mean(ad_cutemp_to_temp)-CuTemp_Cu_removed,
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
 
-
-text(x = c(mgrowth_Control_in_Cu, 0, mgrowth_Cu_in_Cu, 0),
-       y = c(0, mgrowth_Control_in_Temp, 0, mgrowth_Temp_in_Temp),
-     labels = c("C", "T", "C'", "T'"), family = "Times", 
+arrows(x0 = mean(ad_cutemp_to_cu)-CuTemp_Temp_removed,
+       x1 = mean(ad_cutemp_to_cu)-CuTemp_Temp_removed,
+       y0 = mean(ad_cutemp_to_temp)-CuTemp_Cu_removed
+       +std.error(ad_natemp_to_temp),
+       y1 = mean(ad_cutemp_to_temp)-CuTemp_Cu_removed
+       -std.error(ad_natemp_to_temp),
+       col = j.red, code = 3, length = 0.07, angle = 90, lwd = 4)
+       
+text(x = c(mean(ad_cu_to_cu),
+             0,
+             mean(ad_cutemp_to_cu-CuTemp_Temp_removed)),
+       y = c(0,
+             mean(ad_temp_to_temp),
+             mean(ad_cutemp_to_temp-CuTemp_Cu_removed)),
+     labels = c("C", "T", "CT"), family = "Times", 
      col = rgb(0.4, 0.4, 0.4), cex = 2)
-
-text(x = c(mgrowth_Control_in_Cu, mgrowth_CuTemp_in_Cu+Temp_removed),
-     y = c(mgrowth_Control_in_Temp, mgrowth_CuTemp_in_Temp+Cu_removed),
-     labels = c("CT", "CT'"), family = "Times", 
-     col = rgb(0.4, 0.4, 0.4), cex = 2)
-
 ```
 
 <br>
@@ -1387,10 +1414,88 @@ text(x = c(mgrowth_Control_in_Cu, mgrowth_CuTemp_in_Cu+Temp_removed),
 
 <br>
 
+Comparing the actual adaptation to multiple stressors and the taxicab/L1 norm/manhattan distance between non-evolved and evolved populations in performance space. 
+
+- **Organise data for plotting**
+
+```{r, echo=FALSE}
+####### delta AB ########
+delta_NC = mgrowth_NaCu_in_NaCu - mgrowth_Control_in_NaCu
+delta_NT = mgrowth_NaTemp_in_NaTemp - mgrowth_Control_in_NaTemp
+delta_CT = mgrowth_CuTemp_in_CuTemp - mgrowth_Control_in_CuTemp
+delta_NCT = mgrowth_All_in_All - mgrowth_Control_in_All 
+
+######### delta AB* #########
+## L1 (manhattan/taxicab) distance between two points with dist()
+
+nacu_con <- c(0, 0)
+nacu_evo <- c(mean(ad_nacu_to_na)-NaCu_Cu_removed, 
+              mean(ad_nacu_to_cu)-NaCu_Na_removed)
+
+natemp_con <- c(0, 0)
+natemp_evo <- c(mean(ad_natemp_to_na)-NaTemp_Temp_removed, 
+                mean(ad_natemp_to_temp)-NaTemp_Na_removed)
+
+cutemp_con <- c(0, 0)
+cutemp_evo <- c(mean(ad_cutemp_to_cu)-CuTemp_Temp_removed, 
+                mean(ad_cutemp_to_temp)-CuTemp_Cu_removed)
+
+all_con <- c(0, 0, 0)
+all_evo <- c(mean(ad_all_to_na)-All_CuTemp_removed, 
+             mean(ad_all_to_cu)-All_NaTemp_removed,
+             mean(ad_all_to_temp)-All_NaCu_removed)
+#all_evo <- c(X[1], X[2], X[3])
+
+delta_NC_star <- stats::dist(rbind(nacu_con, nacu_evo), 
+                             method = "manhattan")[1]
+delta_NT_star <- stats::dist(rbind(natemp_con, natemp_evo), 
+                             method = "manhattan")[1]
+delta_CT_star <- stats::dist(rbind(cutemp_con, cutemp_evo), 
+                             method = "manhattan")[1]
+delta_NCT_star <- stats::dist(rbind(all_con, all_evo), 
+                              method = "manhattan")[1]
+```
+
+- **Plot**
+
+```{r, echo=FALSE, fig.width=4, fig.height=4, include=TRUE}
+plot(1, type="n", bty = "n", yaxt = 'n', xaxt = 'n',
+     cex.main = 2.5,
+     xlim=c(0.0, 0.15), ylim=c(0.0, 0.15), 
+     xlab = "", #TeX('$\\Delta A B$'),
+     ylab= "") #TeX('$\\Delta A B^{*}$'))
+
+segments(0, 0, 15, 15)
+
+axis(side = 1, pos = 0.0,
+     at = c(0, 0.05, 0.1, 0.15), 
+     labels = c("0", "5", "10", "15"),
+     cex.axis=1, las=1, lwd=1, lwd.ticks = 1)
+
+axis(side = 2, pos = 0.0,
+     at = c(0, 0.05, 0.1, 0.15), 
+     labels = c("0", "5", "10", "15"),
+     cex.axis=1, las=1, lwd=1, lwd.ticks = 1)
+
+points(x = c(delta_NC, delta_CT, delta_NT, delta_NCT),
+       y = c(delta_NC_star, delta_CT_star, delta_NT_star, delta_NCT_star),
+       col = j.red, pch = 19, cex = 7)
+
+text(x = c(delta_NC, delta_CT, delta_NT, delta_NCT),
+       y = c(delta_NC_star, delta_CT_star, delta_NT_star, delta_NCT_star),
+     labels = c("SC", "CT", "ST", "SCT"), family = "Times", 
+     col = rgb(0.4, 0.4, 0.4), cex = 1.5)
+```
+
+<br>
+
+### Figure 5
+
+<br>
+
 - **Organise data for plotting**
 
 ```{r, echo=TRUE}
-
 # Calculate means, sd and se of growth rate for all factors in treat_num 
 q1_means <- with(rot_pop, tapply(mean_growth, treat_num, mean))  
 q1_sd <- with(rot_pop, tapply(mean_growth, treat_num, sd))
@@ -1451,7 +1556,6 @@ figure_3b$environment_f <- factor(figure_3b$Environment,
 figure_3b$environment_n <- as.numeric(figure_3b$environment_f)
 
 ### Calculate grand mean and se 
-
 all_mean <- mean(figure_3b$mean_growth[figure_3b$treat_num == 64])
 nacu_mean <- mean(figure_3b$mean_growth[figure_3b$treat_num == 61])
 natemp_mean <- mean(figure_3b$mean_growth[figure_3b$treat_num == 62])
@@ -1460,7 +1564,6 @@ all_se <- std.error(figure_3b$mean_growth[figure_3b$treat_num == 64])
 nacu_se <- std.error(figure_3b$mean_growth[figure_3b$treat_num == 61])
 natemp_se <- std.error(figure_3b$mean_growth[figure_3b$treat_num == 62])
 cutemp_se <- std.error(figure_3b$mean_growth[figure_3b$treat_num == 63])
-
 ``` 
 
 - **Plot figure**
@@ -1678,10 +1781,7 @@ arrows( x0 = c(1.3, 2.3, 3.3, 4.3),
         col = c(j.red, j.blue, j.blue, j.blue),
         code = 3, length = 0.07, angle = 90, lwd = 2)
 
-
 ```
 
-
-
-
-
+<br>
+<br>
